Fix queue bug and add style to email

--- a/src/app/views/emails/partials/footer.hbs
+++ b/src/app/views/emails/partials/footer.hbs
@@ -1,3 +1,5 @@
 <br />
-Best regards, <br />
-Gympoint Staff
+<div style="color: white; background-color: #EE4D64; padding: 20px;">
+  Best regards, <br />
+  Gympoint Staff
+</div>
