--- a/src/app/views/emails/welcome.hbs
+++ b/src/app/views/emails/welcome.hbs
@@ -1,7 +1,10 @@
-<img src="https://github.com/Rocketseat/bootcamp-gostack-desafio-03/blob/master/.github/logo.png" alt="Gympoint logo" />
-<h1>Welcome to Gympoint</h1>
+<img src="./assets/logo.png" width="150" height="100" />
+<h1 style="color: white; background-color: #EE4D64; padding: 20px;">
+  Welcome to Gympoint
+</h1>
 <h2>Hello, {{ student }}</h2>
-<p>We are so happy to have you with us!!! Your enrollment has been approved.
+<p>
+  We are so happy to have you with us!!! Your enrollment has been approved!
   You can find more information about it below:
 </p>
 <p>
@@ -10,6 +13,3 @@
   <strong>End date:</strong> {{end_date}} <br />
   <strong>Final price:</strong> {{price}} <br />
 </p>
-<h3>
-  Start training right now! Do your check-in!
-</h3>
