Help orders question, answer and mail

--- a/src/app/views/emails/welcome.hbs
+++ b/src/app/views/emails/welcome.hbs
@@ -1,10 +1,9 @@
-<img src="./assets/logo.png" width="150" height="100" />
 <h1 style="color: white; background-color: #EE4D64; padding: 20px;">
   Welcome to Gympoint
 </h1>
 <h2>Hello, {{ student }}</h2>
 <p>
-  We are so happy to have you with us!!! Your enrollment has been approved!
+  Your enrollment has been approved! We are so happy to have you with us!!!<br />
   You can find more information about it below:
 </p>
 <p>
