--- a/src/app/views/emails/layouts/default.hbs
+++ b/src/app/views/emails/layouts/default.hbs
@@ -1,5 +1,7 @@
 <div
   style="font-family: Arial, Helvetica, sans-serif; font-size: 16px; line-height: 1.6; color: #222; max-width: 600px; text-align: center;">
+  <img src="https://github.com/Rocketseat/bootcamp-gostack-desafio-03/raw/master/.github/logo.png"
+    alt="Gympoint logo" />
   {{{ body }}}
   {{> footer }}
 </div>
